--- a/index.html
+++ b/index.html
@@ -129,25 +129,13 @@
         </h2>
         <ul class="icon-group">
           <li>
-            <a href="javascript:;"
-              ><img
-                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/discord.png?raw=true"
-                alt="discord圖片"
-            /></a>
+            <a href="javascript:;"></a>
           </li>
           <li>
-            <a href="javascript:;"
-              ><img
-                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/instagram.png?raw=true"
-                alt="ig圖片"
-            /></a>
+            <a href="javascript:;"></a>
           </li>
           <li>
-            <a href="javascript:;"
-              ><img
-                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/message.png?raw=true"
-                alt="message圖片"
-            /></a>
+            <a href="javascript:;"></a>
           </li>
         </ul>
       </div>
@@ -175,7 +163,7 @@
                 sites, blogs, and landing pages. I take pride in creating clean,
                 efficient, and user-friendly code.
               </p>
-              <a href="javascript:;">SEE MORE<span class="material-symbols-outlined">
+              <a class="btn" href="javascript:;">SEE MORE<span class="material-symbols-outlined">
                 arrow_outward
                 </span></a>
             </div>
