--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- nav -->
     <nav>
       <ul class="container">
-        <li><a href="javascript:;">WILLIAM LEE</a></li>
-        <li><a href="javascript:;">BASED IN TAIWAN</a></li>
+        <li><a href="index.html">WILLIAM LEE</a></li>
+        <li><a href="#introduction">BASED IN TAIWAN</a></li>
         <li>
-          <a href="javascript:;"
+          <a href="#about"
             >CURRENTLY FRONT END<br />ENGINEER AT HEXSCHOOL</a
           >
         </li>
-        <li><a href="javascript:;">CONTACT ME</a></li>
+        <li><a href="#projects">CONTACT ME</a></li>
       </ul>
     </nav>
 
@@ -43,7 +43,7 @@
     </header>
 
     <!-- introduction -->
-    <div class="introduction">
+    <div class="introduction" id="introduction">
       <div class="container">
         <div class="info">
           <h2>Introduction</h2>
@@ -85,7 +85,7 @@
     </div>
 
     <!-- about -->
-    <div class="about container">
+    <div class="about container" id="about">
       <ul class="card-group">
         <li class="card">
           <div class="card-title">01</div>
@@ -120,7 +120,7 @@
     </div>
 
     <!-- contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
       <div class="container">
         <h2>
           CONTACT ME<span class="material-symbols-outlined">
@@ -142,7 +142,7 @@
     </div>
 
     <!-- projects -->
-    <div class="projects container">
+    <div class="projects container" id="projects">
       <h2>My Projects</h2>
       <div class="d-flex">
         <a href="javascript:;"
