修改nav的連結、icon-group的圖片、去除多餘id

--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
     <nav>
       <ul class="container">
         <li><a href="index.html">WILLIAM LEE</a></li>
-        <li><a href="#introduction">BASED IN TAIWAN</a></li>
-        <li>
-          <a href="#about"
-            >CURRENTLY FRONT END<br />ENGINEER AT HEXSCHOOL</a
-          >
-        </li>
-        <li><a href="#projects">CONTACT ME</a></li>
+        <li>BASED IN TAIWAN</li>
+        <li>CURRENTLY FRONT END<br />ENGINEER AT HEXSCHOOL</li>
+        <li><a href="#contact">CONTACT ME</a></li>
       </ul>
     </nav>
 
@@ -32,8 +28,8 @@
           alt="WILLIAM的照片"
         />
         <div class="text">
-          <h2>Hi</h2>
-          <h2>I’m a front-end developer</h2>
+          <h2>Hi<br>
+            I’m a front-end developer</h2>
           <h1>William</h1>
           <a href="javascript:;" class="header-btn">contact me<span class="material-symbols-outlined">
             arrow_outward
@@ -43,7 +39,7 @@
     </header>
 
     <!-- introduction -->
-    <div class="introduction" id="introduction">
+    <div class="introduction">
       <div class="container">
         <div class="info">
           <h2>Introduction</h2>
@@ -85,29 +81,25 @@
     </div>
 
     <!-- about -->
-    <div class="about container" id="about">
-      <ul class="card-group">
+    <div class="about container">
+      <ol class="card-group">
         <li class="card">
-          <div class="card-title">01</div>
-          <div class="card-title">Attention to Detail</div>
+          <h3 class="card-title">Attention to Detail</h3>
           <p>Meticulous code analysis and optimization.</p>
         </li>
         <li class="card">
-          <div class="card-title">02</div>
-          <div class="card-title">Adaptability</div>
+          <h3 class="card-title">Adaptability</h3>
           <p>Swift learning of new technologies.</p>
         </li>
         <li class="card">
-          <div class="card-title">03</div>
-          <div class="card-title">Problem Solver</div>
+          <h3 class="card-title">Problem Solver</h3>
           <p>Identifying and resolving issues.</p>
         </li>
         <li class="card">
-          <div class="card-title">04</div>
-          <div class="card-title">Team Player</div>
+          <h3 class="card-title">Team Player</h3>
           <p>Collaborates and shares ideas.</p>
         </li>
-      </ul>
+      </ol>
       <div class="info">
         <h2>About Me</h2>
         <p>
@@ -129,20 +121,20 @@
         </h2>
         <ul class="icon-group">
           <li>
-            <a href="javascript:;"></a>
+            <a href="javascript:;"><img src="images/discord.png" alt="discord圖片"></a>
           </li>
           <li>
-            <a href="javascript:;"></a>
+            <a href="javascript:;"><img src="images/instagram.png" alt="instagram圖片"></a>
           </li>
           <li>
-            <a href="javascript:;"></a>
+            <a href="javascript:;"><img src="images/message.png" alt="message圖片"></a>
           </li>
         </ul>
       </div>
     </div>
 
     <!-- projects -->
-    <div class="projects container" id="projects">
+    <div class="projects container">
       <h2>My Projects</h2>
       <div class="d-flex">
         <a href="javascript:;"
