修改h1,h2改成class樣式

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           alt="WILLIAM的照片"
         />
         <div class="text">
-          <h2>Hi<br>
+          <h2 class="type-h2">Hi<br>
             I’m a front-end developer</h2>
-          <h1>William</h1>
+          <h1 class="header-title">William</h1>
           <a href="javascript:;" class="header-btn">contact me<span class="material-symbols-outlined">
             arrow_outward
             </span></a>
@@ -42,7 +42,7 @@
     <div class="introduction">
       <div class="container">
         <div class="info">
-          <h2>Introduction</h2>
+          <h2 class="type-h2">Introduction</h2>
           <p>
             Hi, I'm William Lee, a Front-End Developer with a passion for
             building beautiful and responsive websites that provide an optimal
@@ -101,7 +101,7 @@
         </li>
       </ol>
       <div class="info">
-        <h2>About Me</h2>
+        <h2 class="type-h2">About Me</h2>
         <p>
           With over 5 years of experience, I'm proficient in HTML, CSS,
           JavaScript, jQuery, and React. I have a strong understanding of user
@@ -114,7 +114,7 @@
     <!-- contact -->
     <div class="contact" id="contact">
       <div class="container">
-        <h2>
+        <h2 class="type-h2">
           CONTACT ME<span class="material-symbols-outlined">
             trending_flat
             </span>
@@ -135,7 +135,7 @@
 
     <!-- projects -->
     <div class="projects container">
-      <h2>My Projects</h2>
+      <h2 class="type-h2">My Projects</h2>
       <div class="d-flex">
         <a href="javascript:;"
           ><img
